fix z-index for uyes button and draw pile

--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -1,5 +1,5 @@
 #around-UYES{
-    z-index: -1;
+    z-index: 1;
     height: 100%;
     width: 100%;
     grid-row: 3;
@@ -110,7 +110,7 @@
 
 #piles {
 
-    z-index: -1;
+    z-index: 1;
     grid-row: 2;
     grid-column: 1/-1;
     display: flex;
